added header partial that takes in a username and password

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>TinyApp</title>
-</head>
-<body>
-</body>
-</html>
+<header>
+  <form action="/login" method="post">
+  Username:<br>
+  <input type="text" name="username" value="">
+  <br>
+  Password:<br>
+  <input type="password" name="password" value="">
+  <br><br>
+  <input type="submit" value="Submit">
+  <br><br>
+</header>
+
