--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,9 +3,13 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
-   <!-- Add your EJS code here -->
-
-
+<body style="font-size:20px; padding:50px;">
+  <% include partials/_header %>
+  <form action="/urls/<%=shortURL%>" method="POST" style="margin:150px;">
+      <label for="longURL">Short URL: <%=shortURL%></label>
+    <input id="longURL" type="text" name="longURL" value="<%=regularURL%>" style="width: 300px;">
+    <input type="submit" value="Update">
+  </form>
 </body>
 </html>
+
