--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,18 +1,21 @@
 <header>
+  <div>
+  </div>
   <% if (username) {%>
-    <h2>Hello <%=username %></h2>
+    <h2>Hello
+      <%=username %>
+     
+    <br /> +
+    
+    </h2>
     <form action="/logout" method="post">
-    <input type="submit" value="Log the H*ck out">
+      <input type="submit" value="Log the H*ck out">
     </form>
-    <!-- also display logout form -->
-  <% } else { %>
-    <form action="/login" method="post">
-      Username:<input type="text" name="username" value="">
-      Password:<input type="password" name="password" value="">
-      <input type="submit" value="Log the H*ck In">
-    </form>
-    (<a href='/register'>or register</a>, you new person you)
-  <% } %>
-  <hr />
+    <% } else {
+      
+     %>
+     <a href='/login'>LOGIN</a>
+     <a href='/register'>REGISTER</a> 
+     <% } %>
+     <hr />
 </header>
-
