--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,9 @@
 <header>
   <div>
   </div>
-  <% if (username) {%>
+  <% if (user) {%>
     <h2>Hello
-      <%=username %>
+      <%=user.email %>
      
     <br /> +
     
