updated to add some really basic css for better styling

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -3,11 +3,13 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
+<body style="background-color: snow">
   <form action="/login" method="post">
     Username:<input type="text" name="username" value="">
     Password:<input type="password" name="password" value="">
-    <input type="submit" value="Log the H*ck In">
+    <input type="submit" value="Log In">
+    <br />
+    <p style="font-size: 15px;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Log in to view and keep shortened URLs</p>
   </form>
 </body>
 </html>
