--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -3,11 +3,11 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
+<body style="background-color: snow">
   <form action="/register" method="post">
     Username:<input type="text" name="username" value="">
     Password:<input type="password" name="password" value="">
-    <input type="submit" value="Log the H*ck In">
+    <input type="submit" value="Log In">
   </form>
 </body>
 </html>
