--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,7 +3,7 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body style="font-size:20px; padding:50px;">
+<body style="font-size:20px; padding:50px; background-color: snow">
   <% include partials/_header %>
   <form action="/urls/<%=shortURL%>" method="POST" style="margin:150px;">
       <label for="longURL">Short URL: <%=shortURL%></label>
