--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,15 @@
-<header>
+<header style="font-family: Arial, Helvetica, sans-serif; background-color: aliceblue">
   <div>
   </div>
   <% if (user) {%>
     <h2>Hello
       <%=user.email %>
      
-    <br /> +
+    <br /> 
     
     </h2>
     <form action="/logout" method="post">
-      <input type="submit" value="Log the H*ck out">
+      <input type="submit" value="Log out">
     </form>
     <% } else {
       
