--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,7 +3,7 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
+<body style="background-color: snow">
   <% include partials/_header %>
   <br>
   <% for (var i in urls) { %>
@@ -15,6 +15,8 @@
       </form>
     </span>
     <br><br>
-  <% } %> 
+  <% } %>
+  <span>
+    <a href="/urls/new"> New</a> 
 </body>
 </html>
