--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
-<header style="font-family: Arial, Helvetica, sans-serif; background-color: aliceblue">
+<header style="font-family: Arial, Helvetica, sans-serif; background-color: aliceblue"
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <div>
   </div>
   <% if (user) {%>
@@ -9,13 +10,13 @@
     
     </h2>
     <form action="/logout" method="post">
-      <input type="submit" value="Log out">
+      <input class="btn btn-danger" type="submit" value="Log out">
     </form>
     <% } else {
       
      %>
-     <a href='/login'>LOGIN</a>
-     <a href='/register'>REGISTER</a> 
+     <a href='/login'class="btn btn-primary">LOGIN</a>
+     <a href='/register'class="btn btn-success">REGISTER</a> 
      <% } %>
      <hr />
 </header>
