--- a/views/urls_home.ejs
+++ b/views/urls_home.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,9 +10,11 @@
 <body style="background-color: snow">
   <h1 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Welcome to Tiny App! </h1>
   <br />
-  <a href='/login'>LOGIN</a>
+  <a href='/login'class="btn btn-primary">LOGIN</a>
   <br />
-  <a href='/register'>REGISTER</a>
+  <br />
+  <br />
+  <a href='/register' class="btn btn-success">REGISTER</a>
 </body>
 </html>
 
