--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="background-color: snow">
   <% include partials/_header %>
@@ -9,14 +10,14 @@
   <% for (var i in urls) { %>
     <span>
       <%= `${i} → ${urls[i]}` %>
-      <a href="/urls/<%=i%>">edit</a>
+      <a href="/urls/<%=i%>" class="btn btn-warning">edit</a>
       <form method="POST" action="/urls/<%= i %>/delete">
-        <input type="submit" value="Delete" ></input>
+        <input class="btn btn-danger" type="submit" value="Delete" ></input>
       </form>
     </span>
     <br><br>
   <% } %>
   <span>
-    <a href="/urls/new"> New</a> 
+    <a href="/urls/new" class="btn btn-success"> New</a> 
 </body>
 </html>
