--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="background-color: snow">
   <form action="/login" method="post">
-    Username:<input type="text" name="username" value="">
+    Username:<input type="email" name="username" value="">
     Password:<input type="password" name="password" value="">
-    <input type="submit" value="Log In">
+    <input class="btn btn-primary" type="submit" value="Log In">
     <br />
     <p style="font-size: 15px;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Log in to view and keep shortened URLs</p>
   </form>
