--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="background-color: snow">
   <form action="/register" method="post">
-    Username:<input type="text" name="username" value="">
+    Username:<input type="email" name="username" value="">
     Password:<input type="password" name="password" value="">
-    <input type="submit" value="Log In">
+    <input class="btn btn-primary" type="submit" value="Log In">
   </form>
 </body>
 </html>
