--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="font-size:20px; padding:50px; background-color: snow">
   <% include partials/_header %>
   <form action="/urls/<%=shortURL%>" method="POST" style="margin:150px;">
       <label for="longURL">Short URL: <%=shortURL%></label>
     <input id="longURL" type="text" name="longURL" value="<%=regularURL%>" style="width: 300px;">
-    <input type="submit" value="Update">
+    <input class="btn btn-warning" type="submit" value="Update">
   </form>
 </body>
 </html>
