--- a/views/urls_home.ejs
+++ b/views/urls_home.ejs
@@ -12,7 +12,7 @@
 
 <body style="background-color: snow; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"></body>
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" style= background-color:orangered>
     <h1> Welcome to Tiny App! </h1>
   </div>
   <br/>
