--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  </head>
   <body style="font-size:20px; padding:50px;">
     <% include partials/_header %>
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Add">
+      <input class="btn btn-success" type="submit" value="Add">
     </form>
   </body>
 </html>
