tidied up registration page to include h1 and placeholder for input fields

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -5,9 +5,10 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="background-color: snow">
+  <h1>Please register to use TinyApp!</h1>
   <form action="/register" method="post">
-    Username:<input type="email" name="username" value="">
-    Password:<input type="password" name="password" value="">
+    Username:<input type="email" placeholder="email@domain.com..." name="username" value="">
+    Password:<input type="password" placeholder="enter a password..." name="password"  value="">
     <input class="btn btn-primary" type="submit" value="Log In">
   </form>
 </body>
